metadata1/unpackaged/objects/Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Sent to QA Assist Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <label>Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_Link__c</fullName>
        <label>Estimate Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Estimate_Type__c</fullName>
        <label>Estimate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Supplement</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Estimate</label>
        <referenceTo>Estimate__c</referenceTo>
        <relationshipLabel>Estimate</relationshipLabel>
        <relationshipName>Estimate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewID__c</fullName>
        <externalId>true</externalId>
        <label>ReviewID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Estimate</label>
    <nameField>
        <label>Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>